fixed logout bug

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body ng-app="bookingApp" ng-controller="MainController">
+<body ng-app="bookingApp" ng-controller="MainController" class="ng-scope">
 	<div class="container">
 
 		<!-- HEADER -->
